--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 </head>
 <body class="min-h-screen bg-neutral-950 text-neutral-100">
   <div class="max-w-xl mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-6">Association Game</h1>
+    <div class="flex items-center justify-between mb-6">
+      <h1 class="text-3xl font-bold">Association Game</h1>
+      <span id="statePill" class="px-3 py-1 rounded-full text-sm font-semibold bg-neutral-800 border border-neutral-700">State: —</span>
+    </div>
 
     <!-- Name editor -->
     <div class="rounded-2xl bg-neutral-900 border border-neutral-800 p-5 shadow mb-6">
@@ -29,7 +32,7 @@
       <button class="rounded-xl px-5 py-3 bg-emerald-500 text-black font-semibold hover:bg-emerald-400">Submit</button>
     </form>
 
-    <p id="submitted" class="hidden mt-2 text-emerald-400">Submitted! Waiting for reveal…</p>
+    <p id="submitted" class="hidden mt-2 text-emerald-400">Submitted! Waiting for round to close…</p>
 
     <div id="results" class="hidden mt-8">
       <h3 class="text-xl font-bold mb-3">Round Results</h3>
@@ -47,9 +50,16 @@
     const $ = (id) => document.getElementById(id);
     const playerId = localStorage.getItem("playerId");
 
-    // simple debounce
-    function debounce(fn, ms) {
-      let t; return (...args) => { clearTimeout(t); t = setTimeout(() => fn(...args), ms); };
+    // debounce
+    function debounce(fn, ms) { let t; return (...a)=>{clearTimeout(t); t=setTimeout(()=>fn(...a), ms);} }
+
+    function setStatePill(state) {
+      const pill = $("statePill");
+      pill.textContent = "State: " + (state === "idle" ? "Idle" : state === "collecting" ? "Active" : "Closed");
+      pill.className = "px-3 py-1 rounded-full text-sm font-semibold border " +
+        (state === "idle" ? "bg-neutral-800 border-neutral-700"
+         : state === "collecting" ? "bg-emerald-600/20 border-emerald-600"
+         : "bg-amber-600/20 border-amber-600");
     }
 
     function setPrompt(text) { $("prompt").textContent = text || "— waiting for host —"; }
@@ -61,7 +71,7 @@
         const div = document.createElement("div");
         const mine = p.id === me ? "border-emerald-600" : "border-neutral-800";
         div.className = `flex justify-between rounded-xl border ${mine} bg-neutral-900 px-4 py-2`;
-        div.innerHTML = `<span class="text-neutral-300">${i+1}. ${p.name}</span><span class="font-semibold">${p.score}</span>`;
+        div.innerHTML = `<span class="text-neutral-300">${i+1}. ${escapeHtml(p.name)}</span><span class="font-semibold">${p.score}</span>`;
         box.appendChild(div);
       });
     }
@@ -71,12 +81,14 @@
       results.sort((a,b)=>b.freq - a.freq).forEach(r => {
         const row = document.createElement("div");
         row.className = "flex justify-between rounded-xl border border-neutral-800 bg-neutral-900 px-4 py-2";
-        row.innerHTML = `<span class="font-mono">${r.word}</span>
+        row.innerHTML = `<span class="font-mono">${escapeHtml(r.word)}</span>
                          <span>${r.freq} picked • +${r.pointsPerPlayer} each</span>`;
         box.appendChild(row);
       });
       $("results").classList.remove("hidden");
     }
+
+    function escapeHtml(s){ return (s??"").toString().replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;" }[m] )); }
 
     ws.addEventListener("open", () => {
       ws.send(JSON.stringify({ type: "hello", playerId }));
@@ -84,6 +96,7 @@
 
     $("form").addEventListener("submit", (e) => {
       e.preventDefault();
+      if ($("word").disabled) return;
       const w = $("word").value;
       if (!w.trim()) return;
       ws.send(JSON.stringify({ type: "submit", word: w }));
@@ -99,15 +112,26 @@
     ws.addEventListener("message", (ev) => {
       const msg = JSON.parse(ev.data);
 
+      if (msg.gameState) setStatePill(msg.gameState);
+
       if (msg.type === "hello_ack") {
         if (!localStorage.getItem("playerId")) localStorage.setItem("playerId", msg.playerId);
         $("name").value = msg.name || "";
         setPrompt(msg.round?.prompt);
         showLeaders(msg.leaderboard || []);
+
+        // reflect submission status on join
+        if (msg.gameState === "collecting") {
+          $("word").disabled = !!msg.alreadySubmitted;
+          $("submitted").classList.toggle("hidden", !msg.alreadySubmitted);
+        } else {
+          $("word").disabled = true;
+          $("submitted").classList.add("hidden");
+        }
+        if (msg.gameState !== "revealed") $("results").classList.add("hidden");
       }
 
       if (msg.type === "rename_ack") {
-        // Server may trim/clean name; reflect the canonical one
         $("name").value = msg.name;
       }
 
@@ -123,14 +147,29 @@
         setPrompt(msg.round.prompt);
       }
 
+      if (msg.type === "submission_count") {
+        // nothing to do here for players; UI already shows 'submitted' after ack
+      }
+
       if (msg.type === "submit_ack") {
         $("word").disabled = true;
         $("submitted").classList.remove("hidden");
       }
 
       if (msg.type === "round_revealed") {
+        $("word").disabled = true;
+        $("submitted").classList.add("hidden");
         showResults(msg.results);
         showLeaders(msg.leaderboard);
+      }
+
+      if (msg.type === "game_reset") {
+        setPrompt(null);
+        $("word").value = "";
+        $("word").disabled = true;
+        $("submitted").classList.add("hidden");
+        $("results").classList.add("hidden");
+        showLeaders(msg.leaderboard || []);
       }
     });
   </script>
