--- a/public/host.html
+++ b/public/host.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Host · Association Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body class="min-h-screen bg-neutral-950 text-neutral-100">
 <div class="max-w-6xl mx-auto p-6">
