--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Association Game</title>
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body class="min-h-screen bg-neutral-950 text-neutral-100">
 <div class="max-w-xl mx-auto p-6">
@@ -20,16 +22,27 @@
     <!-- Game Screen (hidden until joined) -->
     <div id="game" class="hidden">
         <div class="flex items-center justify-between mb-6 mt-6">
-            <h2 class="text-2xl font-bold">Association Game</h2>
-            <span id="statePill" class="px-3 py-1 rounded-full text-sm font-semibold bg-neutral-800 border border-neutral-700">State: —</span>
-        </div>
+            <!-- Name pill + inline editor -->
+            <div class="relative">
+                <!-- Pill (shown by default) -->
+                <button id="namePill" class="flex items-center gap-2 px-3 py-1 rounded-full border border-neutral-700 text-neutral-200 bg-neutral-900/40 hover:bg-neutral-900/70">
+                    <span id="nameDisplay">—</span>
+                    <!-- tiny pencil -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 opacity-70" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a1.003 1.003 0 0 0 0-1.42l-2.34-2.34a1.003 1.003 0 0 0-1.42 0l-1.83 1.83 3.75 3.75 1.84-1.82z"/>
+                    </svg>
+                </button>
 
-        <!-- Name editor -->
-        <div class="rounded-2xl bg-neutral-900 border border-neutral-800 p-5 shadow mb-6">
-            <label for="name" class="block text-sm text-neutral-300 mb-2">Your name</label>
-            <input id="name" class="w-full rounded-xl px-4 py-3 bg-neutral-800 border border-neutral-700 focus:outline-none"
-                   placeholder="Your name..." maxlength="24" />
-            <p class="text-xs text-neutral-400 mt-1">Change it anytime. Max 24 characters.</p>
+                <!-- Inline editor (hidden until editing) -->
+                <input id="nameEdit"
+                       class="hidden w-[220px] rounded-full px-3 py-1 bg-neutral-900 border border-neutral-700 text-neutral-100 focus:outline-none"
+                       maxlength="24" />
+            </div>
+
+            <!-- State pill (unchanged) -->
+            <span id="statePill" class="px-3 py-1 rounded-full text-sm font-semibold bg-neutral-800 border border-neutral-700">
+                State: —
+              </span>
         </div>
 
         <!-- Prompt -->
@@ -44,6 +57,8 @@
                    placeholder="Type your word..." autocomplete="off" />
             <button class="rounded-xl px-5 py-3 bg-emerald-500 text-black font-semibold hover:bg-emerald-400">Submit</button>
         </form>
+
+        <p id="formError" class="mt-2 text-red-400 text-sm hidden"></p>
 
         <p id="roundInfo" class="mt-2 text-neutral-400 hidden">Waiting for next round…</p>
 
