added visual support for state (prompt card and submit button)

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,11 @@
         <form id="form" class="mt-6 flex gap-2">
             <input id="word" class="flex-1 rounded-xl px-4 py-3 bg-neutral-800 border border-neutral-700 focus:outline-none"
                    placeholder="Type your word..." autocomplete="off" />
-            <button class="rounded-xl px-5 py-3 bg-emerald-500 text-black font-semibold hover:bg-emerald-400">Submit</button>
+            <button
+                    class="rounded-xl px-5 py-3 bg-emerald-500 text-black font-semibold hover:bg-emerald-400"
+                    id="submitBtn"
+                    type="submit"
+            >Submit</button>
         </form>
 
         <p id="formError" class="mt-2 text-red-400 text-sm hidden"></p>
