added svg qrcode

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -28,6 +28,10 @@
     <div id="leaders"></div>
 </div>
 
+<div class="fixed right-6 bottom-6">
+    <img src="/qrcode.svg" alt="Join via QR" class="w-40 h-40 rounded-xl border border-neutral-800 shadow-lg">
+</div>
+
 <!-- JS modules (same as other pages) -->
 <script type="module" src="/js/common.js"></script>
 <script type="module" src="/js/leaderboard.js"></script>
